refactor : 디미터 법칙 적용과 스트림을 가독성 좋게 수정